@@ -1,29 +1,35 @@
 package qouteall.imm_ptl.core.portal;
 
-import de.nick1st.imm_ptl.events.ClientPortalTickEvent;
-import de.nick1st.imm_ptl.events.PortalDisposeEvent;
+import com.mojang.logging.LogUtils;
+import net.fabricmc.api.EnvType;
+import net.fabricmc.api.Environment;
 import net.minecraft.client.Minecraft;
 import net.minecraft.util.profiling.ProfilerFiller;
 import net.neoforged.neoforge.common.NeoForge;
 import org.apache.commons.lang3.Validate;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.slf4j.Logger;
 import qouteall.imm_ptl.core.IPGlobal;
-import qouteall.imm_ptl.core.McHelper;
-import qouteall.imm_ptl.core.portal.animation.ClientPortalAnimationManagement;
 import qouteall.imm_ptl.core.render.GlQueryObject;
-import qouteall.imm_ptl.core.render.PortalGroup;
 import qouteall.imm_ptl.core.render.QueryManager;
 import qouteall.imm_ptl.core.render.context_management.RenderStates;
 import qouteall.imm_ptl.core.render.context_management.WorldRenderInfo;
 import qouteall.q_misc_util.Helper;
 
-import java.util.*;
+import java.lang.ref.Cleaner;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
 
 // A portal's rendering related things
 // to access the package private field of Portal, this class is not in "render" package
-//@OnlyIn(Dist.CLIENT)
-public class PortalRenderInfo {
+@SuppressWarnings("resource")
+@Environment(EnvType.CLIENT)
+public class PortalRenderInfo implements AutoCloseable {
+
+    private static final Logger LOGGER = LogUtils.getLogger();
     
     public static class Visibility {
         public GlQueryObject lastFrameQuery;
@@ -72,11 +78,7 @@ public class PortalRenderInfo {
     private long mispredictTime2 = 0;
     
     private int totalMispredictCount = 0;
-    
-    private boolean needsGroupingUpdate = true;
-    @Nullable
-    private PortalGroup renderingGroup;
-    
+
     public static void init() {
         NeoForge.EVENT_BUS.addListener(ClientPortalTickEvent.class, event -> {
             Portal portal = event.portal;
@@ -85,6 +87,8 @@ public class PortalRenderInfo {
                 presentation.tick(portal);
             }
         });
+        
+        Portal.PORTAL_DISPOSE_SIGNAL.register(portal -> {
 
         NeoForge.EVENT_BUS.addListener(Portal.ClientPortalAcceptSyncEvent.class, clientPortalAcceptSyncEvent ->
                 PortalRenderInfo.updateGroupBinding(clientPortalAcceptSyncEvent.portal));
@@ -97,26 +101,9 @@ public class PortalRenderInfo {
                 PortalRenderInfo renderInfo = getOptional(portal);
                 if (renderInfo != null) {
                     renderInfo.dispose();
-                    renderInfo.setGroup(portal, null);
                 }
             }
         });
-    }
-    
-    private static void updateGroupBinding(Portal portal) {
-        if (portal.level().isClientSide()) {
-            PortalRenderInfo renderInfo = getOptional(portal);
-            if (renderInfo != null) {
-                PortalGroup group = renderInfo.renderingGroup;
-                if (group != null) {
-                    boolean removed = group.removeFromGroupIfNecessary(portal);
-                    if (removed) {
-                        renderInfo.renderingGroup = null;
-                        renderInfo.needsGroupingUpdate = true;
-                    }
-                }
-            }
-        }
     }
     
     @Nullable
@@ -136,30 +123,38 @@ public class PortalRenderInfo {
     }
     
     public PortalRenderInfo() {
-    
+        CLEANER.register(this, getGcDirectedCleaningFunc());
     }
     
     private void tick(Portal portal) {
         Validate.isTrue(portal.level().isClientSide());
-        
-        if (needsGroupingUpdate) {
-            needsGroupingUpdate = false;
-            updateGrouping(portal);
-        }
-        
-        if (renderingGroup != null) {
-            renderingGroup.purge();
-            if (renderingGroup.portals.size() <= 1) {
-                setGroup(portal, null);
-            }
-        }
     }
     
     // disposing twice is fine
     public void dispose() {
-        disposeInfoMap(this.infoMap);
+        disposeInfoMap(infoMap);
     }
     
+    private Runnable getGcDirectedCleaningFunc() {
+        Map<List<UUID>, Visibility> infoMap1 = this.infoMap;
+        // the disposal func should not reference this
+        return () -> {
+            // TODO change it to debug
+            LOGGER.info("Running GC-directed PortalRenderInfo clean");
+
+            // the cleaner runs on its own thread. Use the task list to avoid thread safety issue.
+            IPGlobal.PRE_TOTAL_RENDER_TASK_LIST.addOneShotTask(() -> {
+                disposeInfoMap(infoMap1);
+            });
+        };
+    }
+
+    @Override
+    public void close() throws Exception {
+        dispose();
+    }
+
+    // running it twice is fine
     private static void disposeInfoMap(Map<List<UUID>, Visibility> infoMap) {
         infoMap.values().forEach(Visibility::dispose);
         infoMap.clear();
@@ -225,11 +220,11 @@ public class PortalRenderInfo {
         }
     }
     
-    public static boolean renderAndDecideVisibility(PortalLike portalLike, Runnable queryRendering) {
+    public static boolean renderAndDecideVisibility(Portal portal, Runnable queryRendering) {
         ProfilerFiller profiler = Minecraft.getInstance().getProfiler();
         
         boolean decision;
-        if (IPGlobal.offsetOcclusionQuery && portalLike instanceof Portal portal) {
+        if (IPGlobal.offsetOcclusionQuery) {
             PortalRenderInfo renderInfo = get(portal);
             
             List<UUID> renderingDescription = WorldRenderInfo.getRenderingDescription();
@@ -272,131 +267,5 @@ public class PortalRenderInfo {
         return decision;
     }
     
-    // Grouping -----
-    
-    private void setGroup(Portal portal, @Nullable PortalGroup group) {
-        if (renderingGroup != null) {
-            renderingGroup.removePortal(portal);
-        }
-        
-        renderingGroup = group;
-        if (renderingGroup != null) {
-            renderingGroup.addPortal(portal);
-        }
-    }
-    
-    private void updateGrouping(Portal portal) {
-        Validate.isTrue(!portal.isGlobalPortal);
-        
-        if (!IPGlobal.enablePortalRenderingMerge) {
-            return;
-        }
-        
-        if (!canMerge(portal)) {
-            return;
-        }
-        
-        List<Portal> nearbyPortals = McHelper.findEntitiesByBox(
-            Portal.class,
-            portal.getOriginWorld(),
-            portal.getBoundingBox().inflate(0.5),
-            Math.min(64, portal.getSizeEstimation()) * 2 + 5,
-            p -> p != portal && !Portal.isFlippedPortal(p, portal) && canMerge(p)
-        );
-        
-        Portal.TransformationDesc thisDesc = portal.getTransformationDesc();
-        
-        for (Portal that : nearbyPortals) {
-            PortalRenderInfo nearbyPortalPresentation = get(that);
-            
-            PortalGroup itsGroup = nearbyPortalPresentation.renderingGroup;
-            if (itsGroup != null) {
-                //flipped portal pairs cannot be in the same group
-                if (itsGroup.portals.stream().noneMatch(p -> Portal.isFlippedPortal(p, portal))) {
-                    if (Portal.TransformationDesc.isRoughlyEqual(itsGroup.transformationDesc, thisDesc)) {
-                        if (renderingGroup == null) {
-                            // this is not in group, put into its group
-                            setGroup(portal, itsGroup);
-                        }
-                        else {
-                            // this and that are both in group, merge
-                            mergeGroup(renderingGroup, itsGroup);
-                        }
-                        return;
-                    }
-                }
-            }
-            else {
-                Portal.TransformationDesc itsDesc = that.getTransformationDesc();
-                if (Portal.TransformationDesc.isRoughlyEqual(thisDesc, itsDesc)) {
-                    if (renderingGroup == null) {
-                        // this and that are not in any group
-                        PortalGroup newGroup = new PortalGroup(thisDesc);
-                        setGroup(portal, newGroup);
-                        get(that).setGroup(that, newGroup);
-                    }
-                    else {
-                        // this is in group and that is not in group
-                        get(that).setGroup(that, renderingGroup);
-                    }
-                    
-                    return;
-                }
-            }
-            
-        }
-        
-        setGroup(portal, null);
-    }
-    
-    private static boolean canMerge(Portal p) {
-        if (IPGlobal.forceMergePortalRendering) {
-            return true;
-        }
-        if (!p.isVisible()) {
-            return false;
-        }
-        
-        return p.isRenderingMergable();
-    }
-    
-    @Nullable
-    public static PortalGroup getGroupOf(Portal portal) {
-        Validate.isTrue(!portal.getIsGlobal());
-        
-        PortalRenderInfo portalRenderInfo = getOptional(portal);
-        
-        if (portalRenderInfo == null) {
-            return null;
-        }
-        
-        return portalRenderInfo.renderingGroup;
-    }
-    
-    private static void mergeGroup(PortalGroup g1, PortalGroup g2) {
-        if (g1 == g2) {
-            return;
-        }
-        
-        ArrayList<Portal> g2Portals = new ArrayList<>(g2.portals);
-        for (Portal portal : g2Portals) {
-            get(portal).setGroup(portal, g1);
-        }
-    }
-    
-    @Override
-    protected void finalize() throws Throwable {
-        super.finalize();
-        
-        // normally if a portal is removed by calling remove() it will dispose normally
-        // but that cannot be guaranteed
-        // use this to avoid potential resource leak
-        IPGlobal.PRE_TOTAL_RENDER_TASK_LIST.addTask(() -> {
-//            if (!infoMap.isEmpty()) {
-//                Helper.err("A PortalRenderInfo is not being deterministically disposed");
-//            }
-            dispose();
-            return true;
-        });
-    }
+    private static final Cleaner CLEANER = Cleaner.create();
 }
